[gd_scene load_steps=11 format=2]

[ext_resource path="res://Laser.gd" type="Script" id=1]
[ext_resource path="res://glowing_circle.png" type="Texture" id=2]

[sub_resource type="Gradient" id=6]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )

[sub_resource type="Curve" id=8]
_data = [ Vector2( 0.0168539, 0.218182 ), 0.0, 0.0, 0, 0, Vector2( 0.578652, 0.209091 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=9]
curve = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=10]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 9 )
color_ramp = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=13]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 150.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 9 )
color_ramp = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=12]
emission_shape = 2
emission_box_extents = Vector3( 1, 1, 1 )
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
gravity = Vector3( 0, 0, 0 )
initial_velocity = 10.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
tangential_accel = 100.0
scale = 0.06

[sub_resource type="Environment" id=5]
background_mode = 4
glow_enabled = true
glow_levels/2 = true
glow_levels/4 = true
glow_intensity = 0.7
glow_blend_mode = 0
glow_hdr_luminance_cap = 2.0
glow_bicubic_upscale = true

[node name="Laser" type="RayCast2D"]
position = Vector2( 29, 53 )
cast_to = Vector2( 500, 0 )
script = ExtResource( 1 )

[node name="Line2D" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 20, 0 )
width = 2.0
default_color = Color( 0.5, 3, 6, 1 )

[node name="Tween" type="Tween" parent="."]

[node name="CastingParticles" type="Particles2D" parent="."]
emitting = false
lifetime = 0.3
process_material = SubResource( 10 )
texture = ExtResource( 2 )

[node name="CollisionParticles" type="Particles2D" parent="."]
emitting = false
lifetime = 0.3
process_material = SubResource( 13 )
texture = ExtResource( 2 )

[node name="BeamParticles" type="Particles2D" parent="."]
emitting = false
lifetime = 0.3
randomness = 0.1
local_coords = false
process_material = SubResource( 12 )
texture = ExtResource( 2 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 5 )
